# patootie

./: .gitignore  Cargo.toml  build.js  package.json  partooty.db  tsconfig.paths.json
scripts/: debug.sh  invoke.sh  setup.sh
src/: index.ts  lib.ts  main.rs
src/utilities/: mod.rs
