[package]
name = "partooty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parversion = { git = "https://github.com/davidRoussov/parversion.git" }
tooey = { git = "https://github.com/davidRoussov/tooey.git" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
simple-logging = "2.0.2"
atty = "0.2"
clap = "3.0.0-beta.5"
