[package]
name = "partooty"
version = "0.1.0"
edition = "2021"

[dependencies]
parversion = { git = "https://github.com/davidRoussov/parversion.git" }
tooey = { git = "https://github.com/davidRoussov/tooey.git" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
simple-logging = "2.0.2"
atty = "0.2"
clap = "3.0.0-beta.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.11.3"
fantoccini = "0.19.3"
